# nanorust

./: Cargo.toml  README.md  test.nrs  test.txt
data/: prelude.nrs
hex-coding-macros/: Cargo.toml
hex-coding-macros/src/: lib.rs
nanorust-macros/: Cargo.toml
nanorust-macros/src/: lib.rs
src/: error.rs  eval.rs  expr.rs  interpret.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  typing.rs  value.rs
tests/: test.rs  tests.rs
