workspace = { members = ["nanorust-macros"] }

[package]
name = "nanorust"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ariadne = "0.5.0"
chumsky = { version = "1.0.0-alpha.8", features = ["serde"] } 
hashbrown = "0.15.2"
serde = "1.0.217"
nanorust-macros = { path = "./nanorust-macros" }